# channel-map

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  channel_map.csv  channel_map_e42_20210423.xml  digit_data_e42_20210423.xml  digit_id.csv  digit_id.tsv  digit_name.csv  digit_name.tsv  test.cpp  test.csv  test.tsv  test.yml
include/: DetectorMapping.h
src/: DetectorMapping.cpp
